deployment/kubernetes/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  labels:
    cognite: traefik
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    cognite: traefik
  ports:
    - port: 443
      name: https
      targetPort: https
    - port: 80
      name: http
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
  labels:
    cognite: traefik
spec:
  type: ClusterIP
  ports:
    - name: dashboard
      port: 80
      targetPort: dashboard
  selector:
    cognite: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-prometheus
  namespace: kube-system
  labels:
    cognite: traefik
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
  selector:
    cognite: traefik
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-system
  labels:
    cognite: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      cognite: traefik
  template:
    metadata:
      labels:
        cognite: traefik
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      nodeSelector:
        doks.digitalocean.com/node-pool: nodepool0
      containers:
        - name: traefik
          image: traefik:1.7.28-alpine
          args:
            - --configfile=/config/traefik.toml
          ports:
            - name: http
              containerPort: 80
            - name: httpn
              containerPort: 8880
            - name: https
              containerPort: 443
            - name: dashboard
              containerPort: 8080
            - name: metrics
              containerPort: 9100
          resources:
            requests:
              memory: 32Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 6
            initialDelaySeconds: 30
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /acme
              name: acme
      volumes:
        - name: config
          configMap:
            name: traefik
        - name: acme
          persistentVolumeClaim:
            claimName: traefik
